Fix sidebar nav wrapping for long items. (#75)
* Fix sidebar nav wrapping for long items.

Uses "word-break: break-all" as a fallback for when "overflow-wrap: anywhere" is not supported.

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -126,8 +126,14 @@
 				border: inherit;
 				display: inline-block;
 				padding: 0.4em 1em;
-				word-wrap: anywhere;
+				// Where supported `overflow-wrap: anywhere` is better than
+				// `word-break: break-all` as it only breaks a word where
+				// no otherwise-acceptable break points exist.
 				overflow-wrap: anywhere;
+				word-break: break-all;
+				@supports (overflow-wrap: anywhere) {
+					word-break: normal;
+				}
 				border-color: oColorsGetPaletteColor('teal');
 				border-left: 2px solid;
 				@include oGridRespondTo($from: M) {
